# Tars

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
Tars/: CMakeFiles.cmake  CMakeLists.txt
Tars/include/Tars/: Tars.h  TarsEngine.h
Tars/include/Tars/Input/: InputManager.h  InputTypes.h
Tars/include/Tars/VulkanUtilities/: ValidationLayerInfo.h  VulkanBackend.h  VulkanDevice.h  VulkanInstance.h  VulkanPhysicalDevice.h  VulkanSurface.h
Tars/include/Tars/Window/: Window.h
Tars/src/: Tars.cpp  Tars.h  TarsEngine.cpp  TarsPCH.h
Tars/src/Graphics/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h
Tars/src/Input/: InputManager.cpp
Tars/src/Tars/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h  WindowUsingGLFW.cpp  WindowUsingGLFW.h
Tars/src/Tars/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Tars/src/Tars/ImGui/: ImGuiBuild.cpp  ImGuiBuild.h  ImGuiLayer.cpp  ImGuiLayer.h
Tars/src/Tars/Input/: Input.h  MouseButtonCodes.h
Tars/src/Tars/Items/: Item.h
Tars/src/Tars/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Tars/src/Tars/Logging/: Log.cpp  Log.h
Tars/src/Tars/Main/: Application.cpp  Application.h  Core.h  EntryPoint.h  Window.h
Tars/src/Tars/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Tars/src/Tars/Voxel/Chunk/: Chunk.h
Tars/src/VulkanUtilities/: ValidationLayerInfo.cpp  VulkanBackend.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanPhysicalDevice.cpp  VulkanSurface.cpp
Tars/src/Window/: Window.cpp
Tars/src/Windowing/GLFW/: GLFWInput.cpp  GLFWInput.h  WindowUsingGLFW.cpp  WindowUsingGLFW.h
Tars/tests/: CMakeLists.txt
Tars/tests/src/: unit_tests.cpp
TarsApp/: CMakeFiles.cmake  CMakeLists.txt
TarsApp/src/: TarsApp.cpp  main.cpp
cmake/: warnings.cmake
